// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskCreateComponent Happy Error 1`] = `
<div
  id="root1"
>
  <form
    class="row ng-untouched ng-pristine ng-invalid"
    novalidate=""
  >
    <div
      class="col-6"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-auto"
            >
              <label>
                Tarea:
              </label>
            </div>
            <div
              class="col"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-invalid"
                formcontrolname="title"
                maxlength="40"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Agregar
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`TaskCreateComponent Happy Error 2`] = `
<div
  id="root1"
>
  <form
    class="row ng-untouched ng-pristine ng-invalid"
    novalidate=""
  >
    <div
      class="col-6"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-auto"
            >
              <label>
                Tarea:
              </label>
            </div>
            <div
              class="col"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-invalid"
                formcontrolname="title"
                maxlength="40"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Agregar
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`TaskCreateComponent Happy Path 1`] = `
<div
  id="root0"
>
  <form
    class="row ng-untouched ng-pristine ng-invalid"
    novalidate=""
  >
    <div
      class="col-6"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-auto"
            >
              <label>
                Tarea:
              </label>
            </div>
            <div
              class="col"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-invalid"
                formcontrolname="title"
                maxlength="40"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            disabled=""
            type="submit"
          >
            Agregar
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`TaskCreateComponent Happy Path 2`] = `
<div
  id="root0"
>
  <form
    class="row ng-untouched ng-pristine ng-valid"
    novalidate=""
  >
    <div
      class="col-6"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="row align-items-center"
          >
            <div
              class="col-auto"
            >
              <label>
                Tarea:
              </label>
            </div>
            <div
              class="col"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                formcontrolname="title"
                maxlength="40"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            type="submit"
          >
            Agregar
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;
